--- a/templates/home.html
+++ b/templates/home.html
@@ -37,10 +37,12 @@
       <div class="d-flex flex-wrap pt-5">
         {% for post in data %}
         <div class="col-sm-3">
+          
           <div class="card mx-2">
             <div class="card-body">
-              <h5 class="card-title">{{post.title}}</h5>
-              <p class="card-text">{{post.content}}</p>
+              <img src="{{post.image.url}}" class="card-img-top" alt="...">
+              <h5 class="card-title"><a href="{% url 'detail_post' post.id %}">{{post.title}}</a></h5>
+              <p class="card-text">{{post.content|truncatewords:10}}</p>
               <p>Author : {{post.author.first_name}} {{post.author.last_name}}</p>
               <p>Category :
                 {% for cat in post.category.all %}
